--- a/src/propri.css
+++ b/src/propri.css
@@ -94,9 +94,157 @@ align the items on the main-axis
     color: red;
     all: unset;
   }
+
+  #redborder {
+    border: 5px solid red;
+  }
   
+  #bluebord {
+    border: 4px dotted blue;
+  }
+
+  #dupla {
+    border: double;
+  }
+
+  #example1a {
+    border: 2px solid red;
+    border-bottom-left-radius: 25px;
+  }
   
+  #example2b {
+    border: 2px solid red;
+    border-bottom-left-radius: 50px 20px;
+  }
   
+  table, td, th {
+    border: 1px solid black;
+  }
+  
+  #table1 {
+    border-collapse: separate;
+    border-spacing: 15px;
+  }
+  
+  #table2 {
+    border-collapse: separate;
+    border-spacing: 15px 50px;
+  }
+  p {color: red;}
+
+  p.ex1 {display: none;}
+  p.ex2 {display: inline;}
+  p.ex3 {display: block;}
+  p.ex4 {display: inline-block;}
+
+  #main {
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+    display: flex;
+  }
+  
+  #main div {
+    -ms-flex: 1;  /* IE 10 */  
+    flex: 1;
+  }
+  
+
+  #main2 {
+    width: 300px;
+    height: 100px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+  }
+  
+
+  #main2 div {
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 50px;
+  }
+  
+  #main2 div:nth-of-type(2) {
+    flex-basis: 100px;
+  }
+
+  
+  #main3 {
+    width: 100vw;
+    height: 400px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  
+  #main3 div {
+    width: 50px;
+    height: 50px;
+  }
+  
+  #main4 {
+    width: 100vw;
+    height: 200px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+    flex-flow: row-reverse wrap;
+  }
+  
+  #main4 div {
+    width: 50px;
+    height: 50px;
+  }
+
+  #main5 {
+    width: 100vw;
+    height: 100px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+  }
+
+#main5 div:nth-of-type(1) {flex-grow: 1;}
+#main5 div:nth-of-type(2) {flex-grow: 3;}
+#main5 div:nth-of-type(3) {flex-grow: 1;}
+#main5 div:nth-of-type(4) {flex-grow: 1;}
+#main5 div:nth-of-type(5) {flex-grow: 1;}
+
+  
+
+
+#main6 {
+  width: 350px;
+  height: 100px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+}
+
+#main6 div {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 100px;
+}
+
+#main6 div:nth-of-type(2) {
+  flex-shrink: 3;
+}
+
+
+#main7 {
+  width: 200px;
+  height: 200px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#main7 div {
+  width: 50px;
+  height: 50px;
+}
+
+imgdir {
+  float: right;
+}
   /*
   Set different background properties in one declaration:
   background: lightblue url("img_tree.gif") no-repeat fixed center;
@@ -104,3 +252,422 @@ align the items on the main-axis
   
   */
   
+
+  .grid-container {
+    display: grid;
+    grid: 150px / auto auto auto;
+    grid-gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+  }
+  
+  .grid-container > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+
+
+
+  .grid-container2 {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
+    background-color: #2196F3;
+    padding: 10px;
+  }
+  
+  .grid-container2 > div {
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+  }
+  
+  .item1k {
+    grid-area: 2 / 1 / span 2 / span 3;
+  }
+
+
+
+.item1a { grid-area: 1 / 1 / 2 / 2; }
+.item2a { grid-area: 1 / 2 / 2 / 3; }
+.item3a { grid-area: 1 / 3 / 2 / 4; }
+.item4a { grid-area: 2 / 1 / 3 / 2; }
+.item5a { grid-area: 2 / 2 / 3 / 3; }
+.item6a { grid-area: 2 / 3 / 3 / 4; }
+
+.grid-container3 {
+  display: grid;
+  grid-auto-columns: 50px;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container3 > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+
+
+
+.grid-container4a {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+  
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1c { grid-area: 1 / 1 / 2 / 2; }
+.item2c { grid-area: 1 / 2 / 2 / 3; }
+.item3c { grid-area: 1 / 3 / 2 / 4; }
+.item4c { grid-area: 2 / 1 / 3 / 2; }
+.item5c { grid-area: 2 / 2 / 3 / 3; }
+.item6c { grid-area: 2 / 3 / 3 / 4; }
+
+
+
+.grid-containerc {
+  display: grid;
+  grid-auto-rows: 150px;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containerc > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+
+
+.grid-containere {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containere > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1f {
+  grid-column: 1 / span 2;
+}
+
+
+
+.grid-containerg {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containerg > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1a {
+  grid-column-end: span 3;
+}
+
+
+.grid-containerh {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-column-gap: 50px;
+  grid-row-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containerh > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+
+.grid-containerr {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containerr > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1r {
+  grid-row: 1 / span 2;
+}
+
+
+
+.grid-containeratart {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containeratart > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+.item1s {
+  grid-row-start: 2;
+}
+
+
+.grid-containerj {
+  display: grid;
+  grid-template: 150px / auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containerj > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+.item1t {
+  grid-area: myArea;
+}
+
+.grid-containert {
+  display: grid;
+  grid-template-areas: 'myArea myArea . . .';
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containert > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+.grid-containerc {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 10px;
+  background-color: #2196F3;
+  padding: 10px;
+}
+
+.grid-containerc > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+
+
+div.ca {
+  height: auto;
+  border: 1px solid black;
+}
+
+div.cb {
+  height: 50px;
+  border: 1px solid black;  
+}
+
+
+
+
+
+div.da {
+  width: 55px;
+  border: 1px solid black;
+
+  -webkit-hyphens: none;
+  -ms-hyphens: none;
+  hyphens: none;
+}
+div.db {
+  width: 55px;
+  border: 1px solid black;
+
+  -webkit-hyphens: manual;
+  -ms-hyphens: manual;
+  hyphens: manual;
+}
+div.dc {
+  width: 55px;
+  border: 1px solid black;
+
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
+
+
+
+
+
+.a {
+  background-color: lightgreen;
+}
+#b {
+  width: 250px;
+  height: 250px;
+}
+.c {
+  width: 100px;
+  height: 100px;
+  border: 1px solid black;
+  padding: 2px;
+  mix-blend-mode: difference;
+}
+#d {
+  isolation: auto;
+}
+#e {
+  isolation: isolate;
+}
+
+
+
+#mainaa {
+  width: 400px;
+  height: 100px;
+  border: 1px solid #c3c3c3;
+  display: flex;
+  justify-content: center;
+}
+
+#mainaa div {
+  width: 70px;
+  height: 70px;
+}
+
+
+
+div.xa {
+  position: relative;
+  width: 400px;
+  height: 200px;
+  border: 3px solid red;
+}
+
+div.xb {
+  position: absolute;
+  left: auto;
+  width: 100px;
+  height: 120px;
+  border: 3px solid blue;
+} 
+
+div.xc {
+  position: absolute;
+  left: 150px;
+  width: 200px;
+  height: 120px;
+  border: 3px solid green;
+} 
+
+h2 {
+  border: 1px solid red;
+  outline: 5px dotted green;
+}
+
+
+div.accc {
+  border: 1px solid red;
+  outline: 2px dashed blue;
+}
+
+
+/* overflow-x: hidden;
+overflow-y: hidden;
+*/
+div.exa1 {
+  background-color: lightblue;
+  width: 110px;
+  height: 110px;
+  overflow: scroll;
+}
+
+div.exa2 {
+  background-color: lightblue;
+  width: 110px;
+  height: 110px;
+  overflow: hidden;
+}
+
+div.exa3 {
+  background-color: lightblue;
+  width: 110px;
+  height: 110px;
+  overflow: auto;
+}
+
+div.exa4 {
+  background-color: lightblue;
+  width: 110px;
+  height: 110px;
+  overflow: visible;
+}
