--- a/src/Anima.css
+++ b/src/Anima.css
@@ -52,3 +52,111 @@
     from {top: 50px;}
     to {top: 100px;}
   }
+
+  div.a {
+    width: 150px;
+    height: 80px;
+    background-color: yellow;
+    -ms-transform: rotate(20deg); /* IE 9 */
+    transform: rotate(20deg);
+  }
+  
+  div.b {
+    width: 150px;
+    height: 80px;
+    background-color: yellow;
+    -ms-transform: skewY(20deg); /* IE 9 */
+    transform: skewY(20deg);
+  }
+  
+  div.c {
+    width: 150px;
+    height: 80px;
+    background-color: yellow;
+    -ms-transform: scaleY(1.5); /* IE 9 */
+    transform: scaleY(1.5);
+  }
+
+
+  #div1a {
+    position: relative;
+    height: 200px;
+    width: 200px;
+    margin: 100px;
+    padding: 10px;
+    border: 1px solid black;
+  }
+  
+  #div2a {
+    padding: 50px;
+    position: absolute;
+    border: 1px solid black;
+    background-color: red;
+    -ms-transform: rotate(45deg); /* IE 9 */
+    -ms-transform-origin: 20% 40%; /* IE 9 */
+    transform: rotate(45deg);
+    transform-origin: 20% 40%;
+  }
+
+
+  #div1v {
+    position: relative;
+    height: 200px;
+    width: 200px;
+    margin: 100px;
+    padding: 10px;
+    border: 1px solid black;
+  }
+  
+  #div2v {
+    padding: 50px;
+    position: absolute;
+    border: 1px solid black;
+    background-color: red;
+    transform: rotateY(60deg);
+    transform-style: preserve-3d;
+  }
+  
+  #div3v {
+    padding: 40px;
+    position: absolute;
+    border: 1px solid black;
+    background-color: yellow;
+    transform: rotateY(-60deg);
+  
+  }
+
+  /*
+      transition-delay: 2s;
+    transition-duration: 5s;
+     transition-timing-function: linear;
+  transition-property: width;
+  */
+
+  div.avv {
+    width: 100px;
+    height: 100px;
+    background: red;
+    transition: width 2s;
+
+  }
+  
+  div.avv:hover {
+    width: 300px;
+  }
+
+
+  div.e1x1 {
+    direction: rtl;
+    unicode-bidi: bidi-override;
+  }
+
+
+  div.kkk {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10+ and Edge */
+    user-select: none; /* Standard syntax */
+  }
+
+
+  
