--- a/src/back.css
+++ b/src/back.css
@@ -90,10 +90,89 @@ body {
   @media print {
     h1 {page-break-before: always;}
   }
+
+
+  #div1 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    margin-left: 60px;
+    border: 1px solid blue;
+    perspective: 100px;
+  }
   
+  #div2, #div4 {
+    padding: 50px;
+    position: absolute;
+    border: 1px solid black;
+    background-color: red;
+    background: rgba(100,100,100,0.5); 
+    transform-style: preserve-3d;
+    transform: rotateX(45deg);
+  }
+  
+  #div3 {
+    position: relative;
+    height: 150px;
+    width: 150px;
+    margin-left: 60px;
+    border: 1px solid blue;
+    perspective: none;
+  }
+
+  
+
+  div.exrr1 {
+    pointer-events: none;
+  }
+  
+  div.exrr2 {
+    pointer-events: auto;
+  }
+
+
+  div.nada {
+    position: absolute;
+    left: 100px;
+    top: 150px;
+  }
+
+  div.res {
+    border: 2px solid;
+    padding: 20px; 
+    width: 300px;
+    resize: both;
+    overflow: auto;
+  }
+
+
+  div.ma {
+    position: relative;
+    width: 400px;
+    height: 200px;
+    border: 3px solid red;
+  }
+  
+  div.mb {
+    position: absolute;
+    right: 0;
+    width: 100px;
+    height: 120px;
+    border: 3px solid blue;
+  } 
+  
+  div.mc {
+    position: absolute;
+    right: 150px;  
+    width: 200px;
+    height: 120px;
+    border: 3px solid green;
+  } 
+
+
   /* 
 
-  Example
+  exrrample
 Specify the size of a background-image with "auto" and in pixels:
 
 #example1 {
